--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,19 @@
 body{
     background:darkturquoise;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
 }
+
+.assignment{
+    display:flex;
+    padding:10px;
+    margin: 10px;
+    background-color: coral;
+}
+.assignment img{
+    width: 200px;
+    padding: 10px;
+}
+
 h1{
     color: goldenrod;
     text-align: center;
