--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background:darkturquoise;
+    background:#0F1726;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -7,15 +7,30 @@ body{
     display:flex;
     padding:10px;
     margin: 10px;
-    background-color: coral;
+    background-color:#3C6AA6;
+    border-radius: 10px;
 }
 .assignment img{
     width: 200px;
-    padding: 10px;
+    margin: 10px;
+    border: 4px dashed whitesmoke;
+}
+.assignment img:hover{
+    border: 4px dashed #7FFF00;
 }
 
 h1{
-    color: goldenrod;
+    color: #5FB6D9;
     text-align: center;
 
+}
+h1:hover{
+    color: #7FFF00;
+}
+a {
+    text-decoration:none;
+    color:#D5EDF2;
+}
+a :hover{
+    color: #7FFF00;
 }
