--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,14 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.assignment{
+.assignments{
     display:flex;
-    padding:10px;
+    flex-wrap:wrap;
+}
+
+.assignment{
+    width:21%;
+    padding:20px 10px;
     margin: 10px;
     background-color:#3C6AA6;
     border-radius: 10px;
@@ -14,6 +19,8 @@ body{
     width: 200px;
     margin: 10px;
     border: 4px dashed whitesmoke;
+    display:block;
+    margin:auto;
 }
 .assignment img:hover{
     border: 4px dashed #7FFF00;
@@ -26,6 +33,9 @@ h1{
 }
 h1:hover{
     color: #7FFF00;
+}
+h2{
+    text-align:center;
 }
 a {
     text-decoration:none;
