--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
-    background:#0F1726;
+    background:#808080;
     font-family: Arial, Helvetica, sans-serif;
+    text-align:center;
 }
 
 .assignments{
@@ -27,7 +28,7 @@ body{
 }
 
 h1{
-    color: #5FB6D9;
+    color: #D5EDF2;
     text-align: center;
 
 }
